--- a/JavaScript pruebas/style.css
+++ b/JavaScript pruebas/style.css
@@ -117,6 +117,11 @@ h2 {
     margin-bottom: 100px;
 }
 
+#sounds {
+    text-align: center;
+    padding-top: 20px;
+}
+
 #setButton {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 1.75em;
